syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";

option go_package = "github.com/reimirno/golinks/pkg/pb";

service Golinks {
    rpc GetUrl(GetUrlRequest) returns (PathUrlPair) {}
    rpc PutUrl(PathUrlPair) returns (PathUrlPair) {}
    rpc DeleteUrl(DeleteUrlRequest) returns (google.protobuf.Empty) {}
    rpc ListUrls(google.protobuf.Empty) returns (ListUrlsResponse) {}
}

message PathUrlPair {
    string path = 1;
    string url = 2;
    string mapper = 3;
    int32 use_count = 4;
}

message GetUrlRequest {
    string path = 1;
}

message DeleteUrlRequest {
    string path = 1;
}

message ListUrlsRequest {
    string path = 1;
}

message ListUrlsResponse {
    repeated PathUrlPair pairs = 1;
}
